# beckn-python

./: .gitignore  README.md  __init__.py  build.py  main.py  openapi.json  pyproject.toml  remove.py
beckn/: README.md  __init__.py  pyproject.toml
beckn/package/meta/: api_client.py  configuration.py
beckn/package/registry/: api_client.py  configuration.py
beckn/package/transaction/: api_client.py  rest.py
package/: pyproject.toml
package/meta/: __init__.py  exceptions.py  rest.py
package/meta/api/: __init__.py  beckn_application_platform_bpp_api.py
package/meta/models/: cancellation_reasons_message.py  context.py  country.py  descriptor.py  error.py  get_cancellation_reasons_context.py  get_rating_categories.py  inline_object_message.py  inline_object_message_ack.py  location.py  option.py  rating_categories_context.py  rating_category.py  return_reasons_message.py  scalar.py  tag_group.py
package/registry/: __init__.py  exceptions.py  rest.py
package/registry/api/: registry_api.py
package/registry/models/: __init__.py  country.py  descriptor.py  descriptor_additional_desc.py  image.py  inline_object.py  inline_object1.py  scalar_range.py  subscription.py
package/transaction/: __init__.py  configuration.py  exceptions.py
package/transaction/api/: beckn_gateway_bg_api.py  beckn_provider_platform_bpp_api.py
package/transaction/models/: __init__.py  agent.py  cancel_message.py  category.py  city.py  confirm_context.py  context.py  country.py  customer.py  descriptor.py  domain.py  error.py  fee.py  form.py  fulfillment_state.py  image.py  init.py  (+48 more)
(+94 files in other folders)
