[project]
name = "beckn-python"
version = "0.1.0"
description = "Python SDK for Beckn"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openapi-generator-cli[jdk4py]>=7.13.0.post0",
    "openapi-python-client>=0.24.3",
    "openapi-python-generator>=1.2.0",
    "pydantic[email]>=2.10.3",
    "requests>=2.32.3",
    "trustspeccli>=0.1.2",
]
